# local-anki-gen

./: .gitignore  README.md  prompt.txt  pyproject.toml  requirements.txt  try.py
data/config/: config.py  profile.py  profile_settings.jso
data/words/: prev_words.json
models/: config.py  profile.py  settings.json
models/image_providers/: __init__.py  config.py  exceptions.py  factory.py  utils.py
models/image_providers/examples/: automatic1111_example.py  comfyui_example.py  diffusers_example.py  fal_example.py  openai_example.py  replicate_example.py
models/image_providers/providers/: __init__.py  automatic1111_provider.py  base.py  comfy_provider.py  diffusers_provider.py  fal_provider.py  huggingface_provider.py  invoke_provider.py  openai_provider.py  replicate_provider.py  stability_provider.py
models/image_providers/schemas/: __init__.py  request.py  response.py
models/llm_providers/: llm_models.py
models/tts_providers/: base.py  kokoro_provider.py  melo-tts_provider  qwen3-tts_provider
src/audio-generator/: tts.py
src/image-generator/: image.py
src/sentence-generator/: sentence.py
