[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagegen"
version = "0.1.0"
description = "Unified, provider-agnostic interface for text-to-image generation (LiteLLM for images)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ImageGen Authors" }]
keywords = ["image-generation", "diffusers", "openai", "stability", "text-to-image"]
dependencies = [
    "pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
diffusers = ["torch", "diffusers", "accelerate", "xformers"]
openai = ["openai>=1.0.0"]
huggingface = ["huggingface_hub"]
stability = []
fal = ["fal-client"]
replicate = ["replicate"]
comfyui = []
automatic1111 = []
invokeai = []
all = [
    "torch", "diffusers", "accelerate", "openai>=1.0.0",
    "huggingface_hub", "fal-client", "replicate", "xformers",
]

[tool.setuptools.packages.find]
include = ["imagegen*"]
